[tool.poetry]
name = "hh-cli"
version = "0.1.0"
description = ""
authors = ["Valery Verkhoturov <verkhoturov.valery@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.7"
python-dotenv = "^1.0.0"
requests = "^2.32.0"
flask = "^3.0.0"
pydantic = "^2.5.3"
tinydb = "^4.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
